--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 
       <div id="food"><span id="food-text">FOOD</span></div>
+      <button class="BT" onclick="buyFood">BUY FOOD</button>
       <div id="health"><span id="health-text">HEALTH</span></div>
       <img src="img/hamburger.svg" alt="MENU" id="HamO" onclick="shopOpen()">
       <img src="img/hamburger.svg" alt="MENU" style="display:none;" id="HamC" onclick="shopClose()">
