--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <span id="MoneyCount">0.00</span>
         <img src="img/Dollar.png" alt="Cookie" class="miniCookie"><br />
       </div>
-      <a href="#" class="BT" onclick="Save()" >Save</a>
+      <div class="BT" onclick="Save()" >Save</div>
       <a href="#" class="BT" onclick="Load()" >Load</a>
       <a href="#" class="BT" onclick="Reset()">Reset</a>
     </div>
